still trying to align correctly

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-family: sans-serif, "Open Sans", oswald;
     margin: 0 auto;
     box-sizing: border-box;
-    padding: 5px ;
+    padding: 8px ;
 }
 
 .page-header {
@@ -13,29 +13,27 @@
     border-bottom: 5px solid hsl(190, 76%, 74%);
 }
 
-
 li {
     list-style-type: none;
     display: inline-block;
-    border-radius: 10px;
+    margin: 3px;
+    border-radius: 14px;
     background-color:#89DEEF ;
     color: black;
-    padding: 5px 10px;
+    padding: 8px;
     border-style: none;
     flex-flow: row wrap;
 }
 
 .dogs{
     display: inline-block;
+    flex: 1;
     flex-flow: row wrap;
     width: 300px;
-    margin: .5rem;
-    justify-content: flex-start;
-    padding: 15px;
+    margin: auto;
+    padding: 10px;
+    justify-content: space-between;
     flex-direction: row;
-    flex: auto;
-    align-items: center;
-    word-wrap: break-word;
 }
 
 img {
@@ -47,27 +45,25 @@ img {
      flex: 33%;
      display: inline-flex;
      flex-direction: row;
-
     }
 
     .footer {
         background-color: #A6A9F0 ;
         background-position: center;
-        width: 1500px;
-        font-weight: bold; 
+        width: 1125px;
+        height: 315px;
         font-size: 2.5em;   
         color: white; 
         display: inline-flex;
-        margin-top: 25px;
         text-align: center;
-       
+        line-height: 300px;
     }
         
 
 .box1 {
     flex: 1 1 auto;
     max-width: 100%;
-    height: auto;
+    height: 300px;
     background:
     linear-gradient(
         rgba(166,169,240,0.7),
